--- a/index.html
+++ b/index.html
@@ -38,16 +38,18 @@
                         <span class="blue">VoerEir-AB</span>,
                         developing a network testing manager for telecom cloud infrastructure.
                     </div>
+                    <hr>
                     <div class="para">
-                        I have <span class="orange">2+</span> years of professional experience, and am working with 
+                        I have <span class="purple">2+</span> years of professional experience, and am working with 
                         <span class="green">Django</span>, <span class="green">Python</span>, <span class="green">Linux</span>,
                         <span class="green">Docker</span> and <span class="green">Kubernetes</span> on a daily basis.
                     </div>
+                    <hr>
                     <div class="para">
-                        As a hobby developer, God! I have tales to tell! From
+                        <i>As a hobby developer,</i> God! I have tales to tell! From
                         <span class="orange">Assembly</span> to <span class="orange">AI</span>, I had an adventure unlike any!
                         Here is quick list:
-                        <ul>
+                        <ul style="opacity: 0.8;">
                             <li><span class="green">Python</span>: Django, Flask, Tkinter, Keras, PyTorch</li>
                             <li><span class="blue">Cloud</span>:  Docker, Kubernetes, Gitlab CI, Jenkins</li>
                             <li><span class="orange">JavaScript</span>: Express, React, Electron</li>
@@ -57,14 +59,14 @@
                         </ul>
                     </div>
                     <div class="last">
-                        Have an awesome <span id="day">day</span>! Bye!
+                        Have an awesome <span id="day">day!</span> Bye!
                     </div>
                     <script>
                         const weekday = [
                             "Sunday", "Monday", "Tuesday",
                             "Wednesday", "Thursday", "Friday", "Saturday"
                         ];
-                        document.getElementById("day").innerHTML = weekday[(new Date()).getDay()];
+                        document.getElementById("day").innerHTML = weekday[(new Date()).getDay()] + '!';
 
                     </script>
                 </h1>
